<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="edittext_input">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="time_date">时间和日期</string>
    <string name="adt">开发者选项</string>
    <string name="usb">USB连接</string>
    <string name="app_manager">应用管理</string>
    <string name="forget">忘记</string>
    <string name="referash">刷新</string>
    <string name="device_info">设备信息</string>
    <string name="factory_default">恢复出厂设置</string>
    <string name="storage_info">存储信息</string>
    <string name="advanced_setting">高级设置</string>
    <string name="language_setting">语言设置</string>
    <string name="sound_setting">声音设置</string>
    <string name="net_connection">网络连接</string>
    <string name="one_key_clear">一键清理</string>
    <string name="speed_add">优化加速</string>
    <string name="t_setting">梯形矫正</string>
    <string name="cleaned">清理垃圾 (<xliff:g id="memory">%1$s</xliff:g>)</string>
    <string name="scan_desc">( 打开锐曼微投使用扫一扫\n  可以把手机变成遥控器  )</string>
    <string name="down_desc">( 使用微信扫一扫,下载锐曼微投apk,\n把手机变成遥控,使用手机同屏到投影仪  )</string>
    <string name="soft_undown">软件未下载,请先下载</string>
    <string name="check_update">检查更新</string>
    <string name="more">更多</string>
    <string name="iqiyi">爱奇艺</string>
    <string name="mango_tv">芒果TV</string>
    <string name="audio_visual">视听云极光</string>
    <string name="cibn_video">CIBN环球影视</string>
    <string name="app_error">软件异常,请直接重启</string>
    <string name="recommended">推荐安装</string>
    <string name="install_failed">下载失败</string>
    <string name="xiami_music">虾米音乐</string>
    <string name="qingting_fm">蜻蜓FM</string>
    <string name="magic_tv">魔力TV</string>
    <string name="sogou_input">搜狗输入法</string>
    <string name="view_control">手机投屏</string>
    <string name="installed">已安装</string>
    <string name="open_failed">打开失败</string>
    <string name="tv_show">电视节目</string>
    <string name="local_file">本地文件</string>
    <string name="system_app">系统应用</string>
    <string name="app_search">浏览器</string>
    <string name="app_market">应用市场</string>
    <string name="my_app">我的应用</string>
    <string name="system_set">系统设置</string>
    <string name="qr_code">二维码</string>
    <string name="code_two">二维码</string>
    <string name="dialog_select_type">选择文件类型</string>
    <string name="dialog_type_text">文本</string>
    <string name="dialog_type_audio">音频</string>
    <string name="dialog_type_video">视频</string>
    <string name="dialog_type_image">图像</string>
    <string name="signal_strength">信号强度:</string>
    <string name="security_level">安全性</string>
    <string name="password">密码:</string>
    <string name="connect">连接</string>
    <string name="cancel_save">取消保存</string>
    <string name="show_psw">显示</string>
    <string name="disconnect">忘记</string>
    <string name="cancel">取消</string>
    <string name="conn_status">连接状态</string>
    <string name="ip_address">IP地址</string>
    <string name="app_name">WIFI</string>
    <string name="tv_title">富士通微投</string>
    <string name="main_item_video">影视欣赏</string>
    <string name="button_text_yes">是</string>
    <string name="button_text_no">否</string>
    <string name="toast_warn_scard_ejected">SD卡弹出</string>
    <string name="dialog_create_folder_title">创建文件夹</string>
    <string name="dialog_file_delete_title">确认</string>
    <string name="dialog_file_delete_message">你确认要删除 %1$s?</string>
    <string name="dialog_thanks_to_title">谢谢</string>
    <string name="dialog_thanks_to_message"></string>
    <string name="menu_openwith_title">打开</string>
    <string name="menu_delete_title">删除</string>
    <string name="preference_category_settings_title">通用设置</string>
    <string name="preference_showhidden_title">显示隐藏文件</string>
    <string name="preference_showhidden_key">showhidden</string>
    <string name="preference_showhidden_summary">是否显示文件名称开始 "."</string>
    <string name="preference_showhidden_default_value">false</string>
    <string name="preference_category_about_title">关于</string>
    <string name="preference_help_title">帮助</string>
    <string name="preference_help_summary">可以在这里找到你的HDExlorer问题答案</string>
    <string name="preference_help_intent_data">http://code.google.com/p/hdexplorer/w/list</string>
    <string name="preference_feedback_title">Feedback</string>
    <string name="preference_feedback_summary">帮助我们让HDExplorer更好</string>
    <string name="preference_feedback_intent_data">http://code.google.com/p/hdexplorer/issues/list</string>
    <string name="preference_thanks_key">thanksto</string>
    <string name="preference_thanks_title">谢谢</string>
    <string name="preference_thanks_summary">感谢大家的帮助和支持</string>
    <string name="preference_licenses_title">开放源码许可证</string>
    <string name="preference_licenses_summary">开源软件的许可证详细信息</string>
    <string name="preference_licenses_intent_data">http://code.google.com/p/hdexplorer/wiki/License</string>
    <string name="preference_version_title">应用版本</string>
    <string name="preference_version_summary">0.1.3</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_tv_menu">TvMenuActivity</string>
    <string name="appmarket_use_back">使用环境：Android4.0</string>
    <string name="software_screenshot">软件截图</string>
    <string name="download">下载</string>
    <string name="safety_certification">安全认证</string>
    <string name="star">星级</string>
    <string name="scan_binding">扫描绑定</string>
    <string name="app_download">手机app下载</string>
    <string name="in_sd_card">内置SD卡</string>
    <string name="external_sd_card">外置SD卡</string>
    <string name="sd_card">SD卡</string>
    <string name="current_wifi">当前连接wifi</string>
    <string name="in_search">搜索中...</string>
    <string name="start_search">开始搜索</string>
    <string name="version_number">版本号：1.001</string>
    <string name="popular_recommendation">热门推荐</string>
    <string name="classification">分类</string>
    <string name="selection_operation">请选择操作</string>
    <string name="open">打开</string>
    <string name="uninstall">卸载</string>
    <string name="app_install">应用安装</string>
    <string name="apk_file_operation">apk文件操作</string>
    <string name="confirm">确定</string>
    <string name="application_download">应用下载</string>
    <string name="download_this_app">是否下载当前软件</string>
    <string name="loading">加载中...</string>
    <string name="close">关闭</string>
    <string name="delete_file">删除文件</string>
    <string name="install">安装</string>
    <string name="volume_setting">音量设定</string>
    <string name="media_volume">媒体音量</string>
    <string name="client_info">客户端信息：</string>
    <string name="network_signal">网络信号：</string>
    <string name="connection_speed">连接的速度：</string>
    <string name="ip_address1">IP地址：</string>
    <string name="mac_address">MAC地址：</string>
    <string name="download_lebo_client">请先下载投屏客户端</string>
    <string name="click_in">点击进入</string>
    <string name="client_download">客户端下载</string>
    <string name="scan_browser_open">(微信扫描,点击右上角,用浏览器打开)</string>
    <string name="click_jump_sys_setting">点击自动跳转到系统设置</string>
    <string name="refresh">刷新</string>
    <string name="source">来源:  </string>
    <string name="video_name">片名</string>
    <string name="movies">影视</string>
    <string name="type">类型:</string>
    <string name="year">年份:</string>
    <string name="quality">质量:</string>
    <string name="actor">演员:</string>
    <string name="setting_item">设置项</string>
    <string name="pull_down_refresh">下拉刷新</string>
    <string name="last_update">上次更新</string>
    <string name="TV">卫视</string>
    <string name="CCTV">央视</string>
    <string name="other">其他</string>
    <string name="myapp">我的 APP</string>
    <string name="highlights">精彩推荐</string>
    <string name="network_movie">网络影视</string>
    <string name="sys_app">系统应用</string>
    <string name="info_center">资讯中心</string>
    <string name="sys_setting">系统设置</string>
    <string name="menu">菜单</string>
    <string name="previous">上一首</string>
    <string name="play">播放</string>
    <string name="next">下一首</string>
    <string name="song_name">歌曲名</string>
    <string name="city">城市 </string>
    <string name="temperature">气温 </string>
    <string name="network_error">网络断开</string>
    <string name="TV_program">电视节目</string>
    <string name="domestic_TV">国内电视</string>
    <string name="overseas_theater">海外剧场</string>
    <string name="refresh_network">刷新网络</string>
    <string name="zip_address">压缩包位置 : </string>
    <string name="unzip_path">  解压路径  : </string>
    <string name="unzip">解压</string>
    <string name="list">列表</string>
    <string name="clear">清理</string>
    <string name="apk_file">apk文件</string>
    <string name="video_file">视频文件</string>
    <string name="local">本机</string>
    <string name="all_file">全部文件</string>
    <string name="image">图片</string>
    <string name="music">音乐</string>
    <string name="screen_intensity">屏幕亮度 :</string>
    <string name="wifi_setting">WIFI设置</string>
    <string name="file_name">文件名</string>
    <string name="author">作者</string>
    <string name="wifi">wifi</string>
    <string name="state">状态</string>
    <string name="current_version">当前版本:</string>
    <string name="server_version">服务器版本:</string>
    <string name="local_version">本地版本:</string>
    <string name="update_date">更新日期:</string>
    <string name="update_desc">更新描述:</string>
    <string name="click_update">点击更新</string>
    <string name="signal_strength1">信号强度  :  </string>
    <string name="safety">安全性    :  </string>
    <string name="connection_state">连接状态   :   </string>
    <string name="ip_address2">ip 地址   :  </string>
    <string name="tv_no_install_please_download">"电视节目"未安装,请回主界面点击下载安装</string>
    <string name="movies_no_install_please_download">"影视欣赏"未安装,请回主界面点击下载安装</string>
    <string name="browser_no_install_please_download">浏览器未安装,请先安装</string>
    <string name="tv_click_download">请点击主界面"电视节目"进行下载安装</string>
    <string name="no_result">没有匹配到结果</string>
    <string name="load_failure">加载失败</string>
    <string name="retrieving">正在检索...</string>
    <string name="recommended_installation">推荐安装</string>
    <string name="please_restart">软件异常,请直接重启</string>
    <string name="apk_error_please_restart">安装包出错，请重新启动程序</string>
    <string name="uninstall_failed">卸载失败</string>
    <string name="network_anomaly">网络异常</string>
    <string name="format_error_not_play">视屏格式异常,不可播放</string>
    <string name="start_download">开始下载</string>
    <string name="downloaded">下载完成</string>
    <string name="downloading">下载中</string>
    <string name="downloa_error_try_again">下载失败,稍后重试</string>
    <string name="please_selector_song">请选择歌曲</string>
    <string name="first_song">已是第一首</string>
    <string name="end_song">最后一首</string>
    <string name="search_failed_please_try">查询失败,点击重试</string>
    <string name="network_connections">网络连接成功</string>
    <string name="network_error_jump_setting">网络异常,跳转到系统设置界面</string>
    <string name="connections_refresh">连接成功 ,等待刷新</string>
    <string name="connection_failed">连接失败</string>
</resources>